# polugins

./: .gitignore  LICENSE  README.md  Taskfile.yml  noxfile.py  polugins.toml  pr_body.md  pyproject.toml  ruff.toml
polugins/: CHANGELOG.md  README.md  Taskfile.yml  noxfile.py  pyproject.toml
polugins/src/polugins/: __init__.py  _types.py  _version.py  main.py  pl.py
polugins/src/polugins/_testing/: namespaces.py  self_register.py
polugins/tests/: conftest.py  test_main.py
polugins/tests/pkgs/example_package/: pyproject.toml
polugins/tests/pkgs/example_package/src/example_package/: __init__.py
polugins_type_gen/: CHANGELOG.md  Taskfile.yml  noxfile.py  pyproject.toml
polugins_type_gen/scripts/: generate_polars_stubs.py  stubgen.py
polugins_type_gen/src/polugins_type_gen/: __main__.py  _ast.py  _version.py  cli.py
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.14/polars/dataframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.14/polars/expr/: expr  expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.14/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.14/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.15/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.15/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.15/polars/lazyframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.15/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.16/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.16/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.16/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.16/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.18/polars/dataframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.18/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.18/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.16.18/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.10/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.10/polars/expr/: expr  expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.10/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.10/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.11/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.11/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.11/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.11/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.12/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.12/polars/expr/: expr  expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.12/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.12/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.13/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.13/polars/expr/: expr  expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.13/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.13/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.14/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.14/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.14/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.14/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.15/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.15/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.15/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.15/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.3/polars/dataframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.3/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.3/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.3/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.5/polars/dataframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.5/polars/expr/: expr  expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.5/polars/lazyframe/: frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.5/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.9/polars/dataframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.9/polars/expr/: expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.9/polars/lazyframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.17.9/polars/series/: series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.18.0/polars/dataframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.18.0/polars/expr/: expr  expr.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.18.0/polars/lazyframe/: frame  frame.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.18.0/polars/series/: series  series.pyi
polugins_type_gen/src/polugins_type_gen/_stubs/0.18.11/polars/dataframe/: frame  frame.pyi
polugins_type_gen/tests/: test_cli.py  test_stubs.py
polugins_type_gen/tests/output/polars/dataframe/: frame.pyi
polugins_type_gen/tests/output/polars/expr/: expr.pyi
polugins_type_gen/tests/output/polars/lazyframe/: frame.pyi
polugins_type_gen/tests/output/polars/series/: series.pyi
polugins_type_gen/tests/pkgs/example_package/: pyproject.toml
(+404 files in other folders)
