[tool.poetry]
name = "polugins"
version = "0.2.0"
description = "Plugin system for Polars."
authors = ["StefanBRas <opensource@bruhn.io>"]
readme = "README.md"
packages = [{include = "polugins", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
polars = ">0.16.13"
importlib-metadata = "^6.6.0"
importlib-resources = "^5.12.0"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
example-package = {path = "tests/pkgs/example_package"}
black = "^23.3.0"
nox = "^2023.4.22"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^7.3.1"
example-package = {path = "tests/pkgs/example_package"}
coverage = "^7.2.7"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.polugins.lazyframe]
"pyproject" = "polugins._testing.namespaces:PyProjectNameSpace"

[tool.poetry.scripts]
polugins = 'polugins.cli:cli'

