[project]
name = "polugins"
version = "0.5.1"
description = "Plugin system for Polars."
authors = [{ name = "StefanBRas", email = "opensource@bruhn.io" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["polars>0.16.13", "typing-extensions>=4.4.0", "tomli>=0.2.0"]

[project.scripts]
polugins = 'polugins.cli:cli'


[tool.pytest.ini_options]
env = ["polugins_lazyframe_env=polugins._testing.namespaces:EnvNameSpace"]

[tool.polugins.lazyframe]
"pyproject" = "polugins._testing.namespaces:PyProjectNameSpace"


[tool.ruff]
extend = "../pyproject.toml"
src = ["src"]

lint.ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

[tool.uv]
dev-dependencies = [
  "example-package",
  "pytest>=8.0.0,<9.0.0",
  "pytest-env>=0.8.2,<0.9",
  "pytest-cov>=4.1.0,<5.0.0",
  "coverage>=7.2.7,<8.0.0",
  "ruff==0.7.2",
]

[tool.uv.sources]
example-package = { path = "tests/pkgs/example_package" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
