[tool.poetry]
name = "polugins_type_gen"
version = "0.5.4"
description = "Type stub generator Polugins."
authors = ["StefanBRas <opensource@bruhn.io>"]
readme = "README.md"
packages = [{include = "polugins_type_gen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9" # 3.8 cannot be used because we use ast.unparse
polugins = ">=0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
nox = "^2023.4.22"
coverage = "^7.2.7"
pytest-env = "^0.8.2"
pytest-cov = "^4.1.0"
example-package = {path = "tests/pkgs/example_package"}
pytest-mock = "^3.12.0"
packaging = "^23.2"
ruff = "0.3.1"

[tool.poetry.group.nox]
optional = true

[tool.poetry.group.nox.dependencies]
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.polugins.lazyframe]
"pyproject" = "polugins._testing.namespaces:PyProjectNameSpace"

[tool.poetry.scripts]
polugins = 'polugins_type_gen.cli:cli'

[tool.pytest.ini_options]
env = [
 "polugins_lazyframe_env=polugins._testing.namespaces:EnvNameSpace"
]
pythonpath = [
  "src"
]

[tool.ruff]
extend = "../ruff.toml"
src = ["src"]
