[project]
name = "polugins_type_gen"
version = "0.6.1"
description = "Type stub generator Polugins."
authors = [{ name = "StefanBRas", email = "opensource@bruhn.io" }]
readme = "README.md"
requires-python = ">=3.9.0,<4.0.0"
dependencies = ["polugins>=0.2"]

[project.scripts]
polugins = 'polugins_type_gen.cli:cli'


[tool.pytest.ini_options]
env = ["polugins_lazyframe_env=polugins._testing.namespaces:EnvNameSpace"]
pythonpath = ["src"]

[tool.polugins.lazyframe]
"pyproject" = "polugins._testing.namespaces:PyProjectNameSpace"


[tool.ruff]
extend = "../pyproject.toml"
src = ["src"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0,<9.0.0",
  "coverage>=7.2.7,<8.0.0",
  "pytest-env>=0.8.2,<0.9",
  "pytest-cov>=4.1.0,<5.0.0",
  "example-package",
  "pytest-mock>=3.12.0,<4.0.0",
  "packaging>=23.2.0,<24.0.0",
  "ruff==0.7.2",
  "polars==1.9.0",
]

[tool.uv.sources]
example-package = { path = "tests/pkgs/example_package" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
